--- a/index (1).html
+++ b/index (1).html
@@ -137,7 +137,7 @@
             document.getElementById('loading').style.display = 'block'; // Tampilkan spinner
             setTimeout(() => {
                 const khodams = [
-                { name: "Harimau Putih",},
+                // { name: "Harimau Putih",},
                 { name: "Parakang" },
                 { name: "Poppo",  },
                 { name: "Pocong Galau", },
