--- a/index (1).html
+++ b/index (1).html
@@ -138,7 +138,7 @@
             setTimeout(() => {
                 const khodams = [
                 // { name: "Harimau Putih",},
-                { name: "Parakang" },
+                // { name: "Parakang" },
                 { name: "Poppo",  },
                 { name: "Pocong Galau", },
                 { name: "Hantu megalodon", },
