--- a/index (1).html
+++ b/index (1).html
@@ -139,7 +139,7 @@
                 const khodams = [
                 // { name: "Harimau Putih",},
                 // { name: "Parakang" },
-                { name: "Poppo",  },
+                // { name: "Poppo",  },
                 { name: "Pocong Galau", },
                 { name: "Hantu megalodon", },
                 { name: "Kucing Garong", },
