--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
     <style>
         body {
-            background-image: url("kodam.png"); /* Background lebih gelap */
+            background-image: url("iban.jpg"); /* Background lebih gelap */
             font-family: 'Poppins', sans-serif; /* Font modern Poppins */
             display: flex;
             flex-direction: column;
@@ -137,9 +137,9 @@
             document.getElementById('loading').style.display = 'block'; // Tampilkan spinner
             setTimeout(() => {
                 const khodams = [
-                // { name: "Harimau Putih",},
-                // { name: "Parakang" },
-                // { name: "Poppo",  },
+                { name: "Harimau Putih",},
+                { name: "Parakang" },
+                { name: "Poppo",  },
                 { name: "Pocong Galau", },
                 { name: "Hantu megalodon", },
                 { name: "Kucing Garong", },
