--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         body {
             background-image: url("iban.jpg"); /* Background lebih gelap */
+            background-size: contain;
             font-family: 'Poppins', sans-serif; /* Font modern Poppins */
             display: flex;
             flex-direction: column;
