--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
     <style>
         body {
-            background-image: url("iban.jpg"); /* Background lebih gelap */
+            background-image: url("oke1.jpg"); /* Background lebih gelap */
             background-size: contain;
             font-family: 'Poppins', sans-serif; /* Font modern Poppins */
             display: flex;
